--- a/_includes/share.html
+++ b/_includes/share.html
@@ -7,7 +7,7 @@
 {% if slug == "podcast" %}{% capture sharelink %}{{ site.data.main.url_podcast }}{% endcapture %}{% capture sharelink_name %}{{ site.data.main.url_podcast_name }}{% endcapture %}{% endif %}
 
 {% if thisbook %}{% capture sharelink_name %}{{ site.data.main.domain }}{{ page.url }}{% endcapture %}{% endif %}
-
+<div id="sharelinks">
 {% if page.share!="noshow" %}
 <h3>{{ site.data.main.[share] }}: <a href="{{ sharelink }}">{{ sharelink_name }}</a></h3>
 	{% if include.tweet %}
@@ -18,6 +18,7 @@
 	<h4><a href="{{ page.linked }}">{{ site.data.main.linked }}</a></h4>
 	{% endif %}
 {% endif %}
+</div>
 {% if page.email!="noshow" %}
 <div class="footnotes">
 {% include email.html %}
