--- a/style.scss
+++ b/style.scss
@@ -171,7 +171,7 @@ h4 {
 	text-align: center;
 	color: $textW;
 	margin: auto auto 0px;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.4);
 	a {
 		text-decoration: none;
 		color: $textW;
@@ -182,25 +182,18 @@ h4 {
 	}
 }
 
-.headerblack {
+.headerblack { //no longer as black as it was
 	text-align: center;
-	color: $textB;
+	color: $textW;
 	margin: 0 auto;
-	@include dark-mode {
-		color: $textW;
-	}
+	background-color: rgba(0, 0, 0, 0.4);
 	a {
 		text-decoration: none;
-		color: $textB;
-		@include dark-mode {
-			color: $textW;
-		}
+		color: $textW;
 	}
 	h1, h2, h3 {
-		text-shadow: 1px 1px 2px $textB;
-		@include dark-mode {
-			text-shadow: 1px 1px 2px $textW;
-		}
+		text-shadow: 2px 2px 4px $textB;
+		margin: 0 5px;
 	}
 }
 
