nozbe vlog and nozbe aff link

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -21,6 +21,6 @@
 </div>
 {% if page.email!="noshow" %}
 <div class="footnotes">
-{% include email.html %}
+{% include nozbe.html %}
 </div>
 {% endif %}
