--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -22,6 +22,8 @@ $block: #545454;
 $blockBack: #dcdcdc;
 $blockD: #b5b5b5;
 $blockDBack: #353535;
+$highlight: #ffff99;
+$highlightD: #663300;
 
 // Font stacks
 @font-face {
