--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -1,6 +1,6 @@
 ![Michael Blue](/img/avatar.jpg){: style="height: 180px;"}
 ![Michael Black](/img/michael.black.full.jpg){: style="height: 180px;"}
 ![Michael ATP](/img/michael.atp.jpg){: style="height: 180px;"}
+![Michael UK](/img/michael.glasses.about.jpg){: style="height: 180px;"}
 ![Michael UK](/img/michael.uk.jpg){: style="height: 180px;"}
-![Michael Mountain](/img/michael.mountain.jpg){: style="height: 180px;"}
 ![Michael Team](/img/michael.team.full.jpg){: style="height: 180px;"}
