view source and yearly to year tag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 	<div class="date">{{ langdate }} <a href="{{ site.url }}{{ page.url}}" class="small">{{ page.url}}</a></div>
 </div>
 <footer>
-	{% include share.html tweet=true %}
+	{% include share.html %}
 </footer>
 </article>
 <script type="text/javascript">
