--- a/_includes/share.html
+++ b/_includes/share.html
@@ -10,11 +10,11 @@
 <div id="sharelinks">
 {% if page.share!="noshow" %}
 <h3>{{ site.data.main.[share] }}: <a href="{{ sharelink }}">{{ sharelink_name }}</a></h3>
+{% capture source %}source{{ langvar }}{% endcapture %}
+<p><a href="{{ site.data.main.url_source }}{{ page.path }}?plain=1" target="_blank">{{ site.data.main.[source] }}</a></p>
 	<!-- no longer recommending Twitter
-	{% if include.tweet %}
 	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
 	<h4><a href="https://twitter.com/intent/tweet?text={{ page.title }}&via={{ site.data.main.twitter }}&url={{ sharelink }}&hashtags={{ tagcommas }}">{{ site.data.main.[tweet] }}</a></h4>
-	{% endif %}
 	-->
 	{% if page.linked %}
 	<h4><a href="{{ page.linked }}">{{ site.data.main.linked }}</a></h4>
