--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -14,6 +14,6 @@ layout: default
 </div>
 <footer>
 	{% include book_next.html %}
-	{% include share.html tweet=true %}
+	{% include share.html %}
 </footer>
 </article>
