sharelinks no decoration url

--- a/style.scss
+++ b/style.scss
@@ -308,6 +308,12 @@ sup {
 	font-size: smaller;
 }
 
+#sharelinks {
+	a {
+		text-decoration: none;
+	}
+}
+
 #prevnext {
 	display: block;
 	width: auto;
