--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,6 +12,7 @@ layout: page
 {% if langlang == 'en' or langlang == 'pl' %}
 <br><nav class="tags">
 {% if langlang == 'en' %}
+<a href="#2022">2023</a> |
 <a href="#2022">2022</a> |
 <a href="#2021">2021</a> |
 <a href="#2020">2020</a> |
@@ -28,6 +29,7 @@ layout: page
 <a href="#2009">2009</a> |
 <a href="#2008">2008</a>
 {% else %}
+<a href="#2022">2023</a> |
 <a href="#2022">2022</a> |
 <a href="#2021">2021</a> |
 <a href="#2020">2020</a> |
