--- a/_includes/share.html
+++ b/_includes/share.html
@@ -12,11 +12,11 @@
 <h3>{{ site.data.main.[share] }}: <a href="{{ sharelink }}">{{ sharelink_name }}</a></h3>
 {% capture source %}source{{ langvar }}{% endcapture %}
 <p><a href="{{ site.data.main.url_source }}{{ page.path }}?plain=1" target="_blank">{{ site.data.main.[source] }}</a></p>
-	{% if page.linked %}
-	<h4><a href="{{ page.linked }}" target="_blank">{{ site.data.main.linked }}</a></h4>
-	{% endif %}
-	{% if page.mastodon %}
-	<h4><a href="{{ page.mastodon }}" target="_blank">{{ site.data.main.mastodon }}</a></h4>
+	{% if page.l %}<!-- LinkedIn - the "l" parameter -->
+	<h4><a href="{{ page.l }}" target="_blank">{{ site.data.main.linked }}</a></h4>
+	{% endif %}<!-- Mastodon - the "m" parameter -->
+	{% if page.m %}
+	<h4><a href="{{ page.m }}" target="_blank">{{ site.data.main.mastodon }}</a></h4>
 	{% endif %}
 	<!-- no longer recommending Twitter
 	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
