Thread support for the blog

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -19,6 +19,9 @@
 	{% endif %}<!-- Mastodon - the "m" parameter -->
 	{% if page.m %}
 	<h4><a href="{{ page.m }}" target="_blank">{{ site.data.main.[mastodon] }}</a></h4>
+	{% endif %}<!-- Thread on Twitter - the "t" parameter -->
+	{% if page.m %}
+	<h4><a href="{{ page.m }}" target="_blank">{{ site.data.main.[thread] }}</a></h4>
 	{% endif %}
 	<!-- no longer recommending Twitter
 	{% capture tweet %}sharet{{ langvar }}{% endcapture %}
