--- a/_includes/share.html
+++ b/_includes/share.html
@@ -20,6 +20,7 @@
 	{% if page.m %}
 	<h4><a href="{{ page.m }}" target="_blank">{{ site.data.main.[mastodon] }}</a></h4>
 	{% endif %}<!-- Thread on Twitter - the "t" parameter -->
+	{% capture thread %}thread{{ langvar }}{% endcapture %}
 	{% if page.t %}
 	<h4><a href="{{ page.t }}" target="_blank">{{ site.data.main.[thread] }}</a></h4>
 	{% endif %}
