--- a/style.scss
+++ b/style.scss
@@ -149,6 +149,11 @@ article > footer {
 	width: 50%;
 }
 
+.featured {
+	border-top: 2px solid orange;
+	border-bottom: 2px solid orange;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.3em;
