--- a/_includes/posts-test.html
+++ b/_includes/posts-test.html
@@ -9,7 +9,7 @@ The output also includes "last_post_name" so if we want to exclude it in next li
 If we want to list all posts from one tag - like featured on home page:
 {% include posts.html posts=site.tags.featured limit=1 more=1 %}
 If we want to exclude one post from not appearing in the list (the featured one - so it doesn't repeat!)
-{% include posts.html posts=site.tags.featured limit=1 more=1 exclude="{{ post.name }}" %}
+{% include posts.html posts=site.tags.featured limit=1 more=1 notpost=last_post_name %}
 This way we can exclude a post that is currently featured on the home page!
 {% endcomment %}
 
@@ -24,7 +24,7 @@ This way we can exclude a post that is currently featured on the home page!
 
 {% for post in include.posts %}
   {% if post.lang!=langlang %}{% continue %}{% endif %}
-  {% if post.name==include.exclude %}{% continue %}{% endif %}
+  {% if post.name==include.notpost %}{% continue %}{% endif %}
   {% assign langindex = langindex | plus:1 %}
   {% if include.offset!=nil %}
     {% if langindex <= include.offset %}{% continue %}{% endif %}
