--- a/_includes/posts-test.html
+++ b/_includes/posts-test.html
@@ -11,7 +11,16 @@ If we want to list all posts from one tag - like featured on home page:
 If we want to exclude one post from not appearing in the list (the featured one - so it doesn't repeat!)
 {% include posts.html posts=site.tags.featured limit=1 more=1 notpost=last_post_name %}
 This way we can exclude a post that is currently featured on the home page!
+{% if post.name==include.notpost %}{% continue %}{% endif %}
+
+
 {% endcomment %}
+
+
+
+TESTING POSTS: {{ include.notpost }}
+
+
 
 {% if langlang==nil %}{% include lang.html %}{% endif %}
 {% if include.offset!=nil %}
@@ -23,8 +32,11 @@ This way we can exclude a post that is currently featured on the home page!
 {% capture read %}read{{ langvar }}{% endcapture %}
 
 {% for post in include.posts %}
+
+{{ post.name }}
+
+
   {% if post.lang!=langlang %}{% continue %}{% endif %}
-  {% if post.name==include.notpost %}{% continue %}{% endif %}
   {% assign langindex = langindex | plus:1 %}
   {% if include.offset!=nil %}
     {% if langindex <= include.offset %}{% continue %}{% endif %}
