h2 to h3 on the home page

--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,7 @@ article > footer {
 .featured {
 	border-top: 2px solid orange;
 	border-bottom: 2px solid orange;
+	margin-bottom: 20px;
 }
 
 h1, h2, h3, h4, h5, h6 {
