getFeatured for each blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,5 +20,6 @@ layout: default
 </article>
 <script type="text/javascript">
 	getPrevNext('{{ page.url}}');
+	{% if page.lang=='en' %}getFeatured();{% endif %}
 	getRelated('{{ page.url}}');
 </script>
