Featured won't show on its own featured post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,6 @@ layout: default
 </article>
 <script type="text/javascript">
 	getPrevNext('{{ page.url}}');
-	{% if page.lang=='en' %}getFeatured();{% endif %}
+	{% if page.lang=='en' %}getFeatured('{{ page.url}}');{% endif %}
 	getRelated('{{ page.url}}');
 </script>
