--- a/_includes/nozbe.html
+++ b/_includes/nozbe.html
@@ -2,4 +2,4 @@
 
 <p class="date">{{ site.data.main.[ad] | markdownify }}</p>
 
-<p><a href="https://get.nozbe.com/Mike"><img src="/img/nozbeaff-2.jpg" alt="Nozbe - the fastest way to done in a team" border="0"></a></p>
+<p><a href="https://nozbe.com/promo/?c=michaelteam&a=mike"><img src="/img/nozbeaff-2.jpg" alt="Nozbe - the fastest way to done in a team" border="0"></a></p>
