updates and project makers

--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,7 @@ article > footer {
 .featured {
 	border-top: 2px solid orange;
 	border-bottom: 2px solid orange;
+	padding-bottom: 10px;
 	margin-bottom: 20px;
 }
 
