--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,6 +24,8 @@ $blockD: #b5b5b5;
 $blockDBack: #353535;
 $highlight: #ffff99;
 $highlightD: #663300;
+$hx: #A71FCF;
+$featured: orange;
 
 // Font stacks
 @font-face {
