--- a/_includes/hx.html
+++ b/_includes/hx.html
@@ -1,3 +1,3 @@
 <div class="hx"><div class="hx1"></div><div class="hx2">
 <a href="{{ include.href }}">{{ include.text }}</a>
-</div><div class="hx3"></div></div>
+</div><div class="hx2text"></div><div class="hx3">{{ include.after }}</div></div>
