--- a/style.scss
+++ b/style.scss
@@ -160,24 +160,24 @@ article > footer {
 
 .hx {
 	clear: both;
-	padding: 10px;
+	padding: 10px 0px;
 }
 
 .hx1 {
 	float: left;
-	border-right: 14pt solid $hx;
-	border-top: 18pt solid transparent;
-	border-bottom: 18pt solid transparent;
+	border-right: 12pt solid $hx;
+	border-top: 16pt solid transparent;
+	border-bottom: 16pt solid transparent;
 }
 
 .hx2 {
 	float: left;
-	height: 36pt;
+	height: 32pt;
 	background-color: $hx;
 	text-align: center;
 	line-height: 2em;
 	font-family: -apple-system, sans-serif;
-	font-size: 1.5em;
+	font-size: 1.4em;
 	color: $textW;
 	a {
 		color: $textW;
@@ -186,14 +186,18 @@ article > footer {
 			text-decoration: underline;
 		}
 	}
+}
 
+.hx2text {
+  line-height: 2em;
+  font-size: 1.4em;
 }
 
 .hx3 {
 	float: left;
-	border-left: 14pt solid $hx;
-	border-top: 18pt solid transparent;
-	border-bottom: 18pt solid transparent;
+	border-left: 12pt solid $hx;
+	border-top: 16pt solid transparent;
+	border-bottom: 16pt solid transparent;
 }
 
 h1, h2, h3, h4, h5, h6 {
