--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -40,7 +40,8 @@ This way we can exclude a post that is currently featured on the home page!
 <p><a href="{{ post.url }}" title="{{ post.title }}"><img src="{{ site.url }}/img/{{ postimage }}" alt="{{ post.title }}" /></a></p>
     {% endif %}
 
-{% include hx.html text=site.data.main.[read] href=post.url title=post.title %}
+{% capture posttext %}{{ site.data.main.[read] }}{% endcapture %}
+{% include hx.html text=posttext href=post.url title=post.title %}
 
   {% endif %}
   {% assign last_post_url = post.url %}
