--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -42,6 +42,7 @@ This way we can exclude a post that is currently featured on the home page!
 
 {% capture posttext %}{{ site.data.main.[read] }}{% endcapture %}
 {% include hx.html text=posttext href=post.url title=post.title %}
+<br clear="all" />
 
   {% endif %}
   {% assign last_post_url = post.url %}
