Hx and N and local ad updates

--- a/_includes/hx.html
+++ b/_includes/hx.html
@@ -1,3 +1,4 @@
 <div class="hx"><div class="hx1{% if include.grey %} hx1grey{% endif %}"></div><div class="hx2{% if include.grey %} hx2grey{% endif %}">
 <a href="{{ include.href }}" title="{{ include.title }}">{{ include.text }}</a>
 </div><div class="hx3{% if include.grey %} hx3grey{% endif %}"></div><div class="hx2text">{{ include.after }}</div></div>
+<br clear="all" />
