--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,9 +106,7 @@
 <div class="begend" id="footer">
 	<div class="begender center"><p>&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.[pagename] }}</a></p>
 	</div>
-	<div style="max-width: 140pt; margin: auto;">
-		{% include hx.html text="<strong>&nbsp;N&nbsp;</strong>" href="/gratis?to=na" after="&nbsp;is for <a href='/gratis?to=na'>Nozbe</a>" title="Nozbe helps smart business owners maintain a work-life balance" %}
-	</div>
+{% include nozbe_n.html %}
 </div>
 
 </body></html>
