--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -10,6 +10,7 @@ layout: default
 
 <div class="entry">
 	{{ tag_subtitle | markdownify }}
+	{% if tag_name == "nozbe" %}{% include nozbe_n.html %}{% endif %}
 	{% include podcast.html id=tag_name %}
 	{% if page.limit %}{% assign tag_limit = page.limit %}
 		{%else %}{% assign tag_limit = 10 %}{% endif %}
