--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,15 +31,15 @@
 <meta property="og:description" content="{{ site.data.main.[pagedescr] | markdownify | strip_html }}" />
 <meta property="twitter:description" content="{{ site.data.main.[pagedescr] | markdownify | strip_html }}" />
 {% endif %}
-{% if page.cover %}
-<meta name="twitter:image" content="{{ site.url }}/img/{{ page.cover }}" />
-<meta property="og:image" content="{{ site.url }}/img/{{ page.cover }}" />
+{% if page.social %}
+<meta name="twitter:image" content="{{ site.url }}/social/{{ page.social }}" />
+<meta property="og:image" content="{{ site.url }}/social/{{ page.social }}" />
 {% elsif page.img %}
 <meta name="twitter:image" content="{{ site.url }}/img/{{ page.img }}" />
 <meta property="og:image" content="{{ site.url }}/img/{{ page.img }}" />
-{% elsif page.social %}
-<meta name="twitter:image" content="{{ site.url }}/social/{{ page.social }}" />
-<meta property="og:image" content="{{ site.url }}/social/{{ page.social }}" />
+{% elsif page.cover %}
+<meta name="twitter:image" content="{{ site.url }}/img/{{ page.cover }}" />
+<meta property="og:image" content="{{ site.url }}/img/{{ page.cover }}" />
 {% elsif page.vid %}
 <meta name="twitter:player" content="https://www.youtube.com/embed/{{ page.vid }}"/>
 <meta name="twitter:player:width" content="1280" />
