more search link

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,7 +2,8 @@
 {% capture searchbox %}searchbox{{ langvar }}{% endcapture %}
 {% capture searchbox_no %}searchbox{{ langvar }}_no{% endcapture %}
 {% capture pagemenu %}menu{{ langvar }}{% endcapture %}
-<div id="search-container">{% for item in site.data.main.[pagemenu] %}{{ searchseparator }}<a href="{{ site.url }}{{ item.url }}"{% if item.url == page.url %} class="bold"{% endif %}>{{ item.title }}</a>{% assign searchseparator = " | " %}{% endfor %} &nbsp; <input type="text" id="search-input" placeholder="{{ site.data.main.[searchbox] }}"><div id="search-menu" style="display:none;"></div>
+{% capture pagemenumore %}menumore{{ langvar }}{% endcapture %}
+<div id="search-container">{% for item in site.data.main.[pagemenu] %}{{ searchseparator }}<a href="{{ site.url }}{{ item.url }}"{% if item.url == page.url %} class="bold"{% endif %}>{{ item.title }}</a>{% assign searchseparator = " | " %}{% endfor %} <span id="search-link">| <a href="javascript:getSearch();">{{ site.data.main.[pagemenumore] }}</a></span><span id="search-thing" style="display: none;">&nbsp; <input type="text" id="search-input" placeholder="{{ site.data.main.[searchbox] }}"></span><div id="search-menu" style="display:none;"></div>
 	<ul id="search-results"></ul>
 </div>
 
