--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,6 +12,7 @@ layout: page
 {% if langlang == 'en' or langlang == 'pl' %}
 <br><nav class="tags">
 {% if langlang == 'en' %}
+<a href="#2025">2025</a> |
 <a href="#2024">2024</a> |
 <a href="#2023">2023</a> |
 <a href="#2022">2022</a> |
@@ -30,6 +31,7 @@ layout: page
 <a href="#2009">2009</a> |
 <a href="#2008">2008</a>
 {% else %}
+<a href="#2025">2025</a> |
 <a href="#2024">2024</a> |
 <a href="#2023">2023</a> |
 <a href="#2022">2022</a> |
@@ -39,8 +41,11 @@ layout: page
 <a href="#2018">2018</a> |
 <a href="#2017">2017</a> |
 <a href="#2016">2016</a> |
+<a href="#2015">2015</a> |
 <a href="#2014">2014</a> |
+<a href="#2013">2013</a> |
 <a href="#2012">2012</a> |
+<a href="#2011">2011</a> |
 <a href="#2010">2010</a>
 {% endif %}
 </nav>
