--- a/_layouts/todo.html
+++ b/_layouts/todo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael.team to-do list</title>
-	<link rel="stylesheet" href="/css/todo.css">
+	<link rel="stylesheet" href="/todo.css">
     <script src="/js/todo-lists.js"></script>
 </head>
 <body>
