--- a/_layouts/todo.html
+++ b/_layouts/todo.html
@@ -19,6 +19,8 @@
 </div>
 
 <p><br><a style="text-decoration:none;" id="resetLink">Reset to do list</a></p>
+<p><br><a href="/todolist/">Made with ❤️ by Michael Sliwinski…</a></p>
+<p><a href="https://nozbe.com/?c=michaeltodo">…founder of Nozbe ✅</a></p>
     <!-- Detect Safari so we can load different versions for iOS9 on my old iPad -->
     <script>
         function isSafariBelow10() {
