--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,6 +12,7 @@ layout: page
 {% if langlang == 'en' or langlang == 'pl' %}
 <br><nav class="tags">
 {% if langlang == 'en' %}
+<a href="#2026">2026</a> |
 <a href="#2025">2025</a> |
 <a href="#2024">2024</a> |
 <a href="#2023">2023</a> |
@@ -31,6 +32,7 @@ layout: page
 <a href="#2009">2009</a> |
 <a href="#2008">2008</a>
 {% else %}
+<a href="#2026">2026</a> |
 <a href="#2025">2025</a> |
 <a href="#2024">2024</a> |
 <a href="#2023">2023</a> |
